--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@
 	                                <div class="data" id="gallery-pagemidcol">
                                         <div class="data" id="gallery-pagegallery-block">
                                             <ul id="gallerypagecol-1">
-                                                <li><a href="#"><img src="./1landscape.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="./1landscape.jpg" alt=""></a></li>
-                                                <li><a href="#"><img src="./2landscape.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="./2landscape.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" alt=""></a></li>
                                                 <li><a href="#"><img src="./3landscape.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="./3landscape.jpg"" alt=""></a></li>
                                              </ul>
                                             <ul id="col-2">
