--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                         </header> 
                         <nav class="data" id="gallery-pagenav">
                             <ul>
-                                <li class="btn"><a href="gallery-oone-col.html">Page Two</a></li>
+                                <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
                                 <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
                                 <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
                                 <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
@@ -586,7 +586,7 @@
                             </header> 
                             <nav class="data" id="gallery-pagenav">
                                 <ul>
-                                    <li class="btn"><a href="gallery-oone-col.html">Page Two</a></li>
+                                    <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
                                     <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
                                     <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
                                     <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
@@ -737,7 +737,7 @@
                                     </header> 
                                     <nav class="data" id="gallery-pagenav">
                                          <ul>
-                                            <li class="btn"><a href="gallery-oone-col.html">Page Two</a></li>
+                                            <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
                                             <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
                                             <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
                                             <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
