--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                                             <ul id="gallerypagecol-1">
                                                 <li><a href="#"><img src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt=""></a></li>
                                                 <li><a href="#"><img src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" alt=""></a></li>
-                                                <li><a href="#"><img src="./3landscape.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="./3landscape.jpg"" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" alt=""></a></li>
                                              </ul>
                                             <ul id="col-2">
                                                 <li><a href="#"><img src="./4landscape.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="./4landscape.jpg" alt=""></a></li>
