--- a/index.html
+++ b/index.html
@@ -845,14 +845,14 @@
                                 <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
                             </div>
                         </div><!-- end-col-12 -->
-                    </div><!-- end-.row -->
+                    
                     <br class="clear">
                             <div class="col-3">
                                 <img class="circle" src="img/orange-globe.png">
                             </div> <!-- end col-3 -->
                         </div><!-- end col-11 -->
-                    </div> <!-- end class row -->
-
+                    
+            </div> <!-- end wrapper -->
                     <br class="clear">
                     <div class="row" style="background-color: #1abc9c;">
 						-->
@@ -1011,7 +1011,8 @@
                         </div>
                     </div>
                     <br class="clear">
-			
+			</div> <!-- end wrapper -->
+
                     <div class="row" style="background-color: #34495e;">
                         <div class="col-8">
                             <h2>In just 42 hours and 27 minutes</h2>
