--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                                                 <li><a href="#"><img src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" alt=""></a></li>
                                              </ul>
                                             <ul id="col-2">
-                                                <li><a href="#"><img src="./4landscape.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="./4landscape.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt=""></a></li>
                                                 <li><a href="#"><img src="./5landscape.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="./5landscape.jpg" alt=""></a> </li>
                                                 <li><a href="#"><img src="./6landscape.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="./6landscape.jpg" alt=""></a></li>
                                             </ul>
