--- a/index.html
+++ b/index.html
@@ -768,8 +768,8 @@
                                              </ul>
                                             <ul id="col-2">
                                                 <li><a href="#"><img src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt=""></a></li>
-                                                <li><a href="#"><img src="./5landscape.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="./5landscape.jpg" alt=""></a> </li>
-                                                <li><a href="#"><img src="./6landscape.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="./6landscape.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg" alt=""></a> </li>
+                                                <li><a href="#"><img src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" alt=""></a></li>
                                             </ul>
                                             <ul id="col-3">
                                                 <li><a href="#"><img src="./7landscape.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="./7landscape.jpg" alt=""></a></li>
