--- a/index.html
+++ b/index.html
@@ -772,9 +772,9 @@
                                                 <li><a href="#"><img src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" alt=""></a></li>
                                             </ul>
                                             <ul id="col-3">
-                                                <li><a href="#"><img src="./7landscape.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="./7landscape.jpg" alt=""></a></li>
-                                                <li><a href="#"><img src="./8landscape.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="./8landscape.jpg" alt=""></a></li>
-                                                <li><a href="#"><img src="./9landscape.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="./9landscape.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg" alt=""></a></li>
+                                                <li><a href="#"><img src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg" alt=""></a></li>
                                             </ul>
                                             <br class="clear">
                                         </div><!--gallery block closed -->
