--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                 <div id="photos">
                                     <a href="#" class="trigger">Image Gallery</a>
                                     <ul id="photos_inner">
-                                        <li><img alt="Glendatronix" src="images/glenda_400.jpg" /></li>
+                                        <li><img alt="Glendatronix" src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg" /></li>
                                         <li><img alt="Darth Fader" src="images/fader_400.jpg" /></li>
                                         <li><img alt="Beau Dandy" src="images/beau_400.jpg" /></li>
                                         <li><img alt="Johnny Stardust" src="images/johnny_400.jpg" /></li>
