--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
                                 <div id="photos">
                                     <a href="#" class="trigger">Image Gallery</a>
                                     <ul id="photos_inner">
-                                        <li><img alt="Glendatronix" src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg" /></li>
-                                        <li><img alt="Darth Fader" src="images/fader_400.jpg" /></li>
+                                        <li><img alt="Glenda" src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg" /></li>
+                                        <li><img alt="Fader" src="CSS/images/22141110_368359666926397_5819846886060823879_n.jpg" /></li>
                                         <li><img alt="Beau Dandy" src="images/beau_400.jpg" /></li>
                                         <li><img alt="Johnny Stardust" src="images/johnny_400.jpg" /></li>
                                         <li><img alt="Mo' Fat" src="images/mofat_400.jpg" /></li>
