--- a/index.html
+++ b/index.html
@@ -340,6 +340,15 @@
             <div class="data" id="#html5style2content">
                 <div class="row">
                     <div class="col-12">
+                        <img src="img/kite.png">
+                        <p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
+                            kind of like people so their privacy should be respected.
+                        </p>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+                <div class="row">
+                    <div class="col-12">
                         <h2>Welcome!</h2>
                         <div id="navigation">
                             <ul>
@@ -359,16 +368,6 @@
                             monitoring service. Need to know where in the world the best bands, musicians or producers
                             are within 2.2 square meters? You've come to the right place. We have a very special special
                             on B-grade celebs this week, so hurry in!
-                        </p>
-                    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
-
-                <div class="row">
-                    <div class="col-12">
-                        <img src="img/kite.png">
-                        <p id="disclaimer">
-                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
-                            kind of like people so their privacy should be respected.
                         </p>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
@@ -404,18 +403,16 @@
                         <div id="photos">
                             <a href="#" class="trigger">Image Gallery</a>
                             <ul id="photos_inner">
-                                <li><img alt="Glenda"
-                                        src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg" /></li>
-                                <li><img alt="Fader"
-                                        src="CSS/images/22141110_368359666926397_5819846886060823879_n.jpg" /></li>
-                                <li><img alt="Beau Dandy" src="images/beau_400.jpg" /></li>
-                                <li><img alt="Johnny Stardust" src="images/johnny_400.jpg" /></li>
-                                <li><img alt="Mo' Fat" src="images/mofat_400.jpg" /></li>
-                                <li><img alt="Glendatronix" src="images/kellie_400.jpg" /></li>
-                                <li><img alt="Darth Fader" src="images/fader_400.jpg" /></li>
-                                <li><img alt="Beau Dandy" src="images/beau_400.jpg" /></li>
-                                <li><img alt="Johnny Stardust" src="images/johnny_400.jpg" /></li>
-                                <li><img alt="Mo' Fat" src="images/mofat_400.jpg" /></li>
+                                <li><img alt="Glenda" src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg"></li>
+                                <li><img alt="Fader" src="CSS/images/22141110_368359666926397_5819846886060823879_n.jpg"></li>
+                                <li><img alt="Beau Dandy" src="images/beau_400.jpg"></li>
+                                <li><img alt="Johnny Stardust" src="images/johnny_400.jpg"></li>
+                                <li><img alt="Mo' Fat" src="images/mofat_400.jpg"></li>
+                                <li><img alt="Glendatronix" src="images/kellie_400.jpg"></li>
+                                <li><img alt="Darth Fader" src="images/fader_400.jpg"></li>
+                                <li><img alt="Beau Dandy" src="images/beau_400.jpg"></li>
+                                <li><img alt="Johnny Stardust" src="images/johnny_400.jpg"></li>
+                                <li><img alt="Mo' Fat" src="images/mofat_400.jpg"></li>
                             </ul>
                         </div>
                     </div><!-- end-col-12 -->
@@ -761,7 +758,7 @@
                     <span class="label">Raised so far</span>
                     <span class="value">&pound;3,000</span>
                 </div>
-            </div>
+            
             <div class="display">
                 <div class="thermometer">
                     <div class="top"></div>
@@ -771,6 +768,9 @@
                     <div class="base current_total">
                         <div class="value">&pound;3,000</div>
                     </div>
+                </div>
+                </div>
+                </div>
                     <div class="row">
                         <div class="çol-12">
                             <div class="col-11">
