--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./js/scripts.js"></script>
         <!--
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> 
-		<link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+        <link rel="stylesheet" type="text/css" href="CSS/css/index-973f48a9b2be581a2212ac40e39a92258a3d10ae46dc49036c6a35.css"> 
+		<!-- <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">-->
         <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" />
         <!-- lightbox -->
         <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
