--- a/index.html
+++ b/index.html
@@ -781,113 +781,62 @@
                     </div>
                 </div>
                 </div>
-                </div>
+                
                     <div class="row">
                         <div class="çol-12">
-                            <div class="col-11">
-                                <header class="data" id="gallery-pageheader">
-                                    <h1>A full page roll-over gallery of greetings cards</h1>
-                                    <h2>Hover the mouse over a small picture to see an enlarged version</h2>
-                                </header>
-                                <nav class="data" id="gallery-pagenav">
-                                    <ul>
-                                        <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
-                                        <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
-                                        <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
-                                        <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
-                                    </ul>
-                                </nav>
+                            <header class="data" id="gallery-pageheader">
+                                <h1>A full page roll-over gallery of greetings cards</h1>
+                                <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+                            </header>
+                            <nav class="data" id="gallery-pagenav">
+                                <ul>
+                                    <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
+                                    <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
+                                    <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
+                                    <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
+                                </ul>
+                            </nav>
+                            <br class="clear">
+                            <div class="data" id="gallery-pagerightcol">
+                                <h4> StarTrackr</h4>
+                                <br><br>
+                                <p>
+                                    <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
+                                </p>
+                                <p>
+                                    <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
+                                    <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+                                </p>
                                 <br class="clear">
-                                <div class="data" id="gallery-pagerightcol">
-                                    <h4> StarTrackr</h4>
-                                    <br><br>
-                                    <p>
-                                        <a href="http://validator.w3.org/check?uri=referer"><img
-                                                src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64"
-                                                height="64" alt="Validated HTML5" title="Validated HTML5"></a>
-                                    </p>
-                                    <p>
-                                        <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif"
-                                                width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
-                                        <span class="small"><br><br>Markup Validated by the World Wide Web
-                                            Consortium</span>
-                                    </p>
-                                    <br class="clear">
-                                    <p class="advert">Web Design by Orris Baker</p>
-                                </div>
-                                <br class="clear">
+                                <p class="advert">Web Design by Orris Baker</p>
+                            </div>
+                            <br class="clear">
 
-                                <div class="data" id="gallery-pagemidcol">
-                                    <div class="data" id="gallery-pagegallery-block">
-                                        <ul id="gallerypagecol-1">
-                                            <li><a href="#"><img
-                                                        src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg"
-                                                        width="70px" height="103px" alt="Ali" title="Ali"><img
-                                                        class="hid"
-                                                        src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg"
-                                                        alt=""></a></li>
-                                            <li><a href="#"><img
-                                                        src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg"
-                                                        width="69px" height="91px" alt="Cat" title="Cat"><img
-                                                        class="hid"
-                                                        src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg"
-                                                        alt=""></a></li>
-                                            <li><a href="#"><img
-                                                        src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg"
-                                                        width="75px" height="95px" alt="Beach" title="Beach"><img
-                                                        class="hid"
-                                                        src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg"
-                                                        alt=""></a></li>
-                                        </ul>
-                                        <ul id="col-2">
-                                            <li><a href="#"><img
-                                                        src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg"
-                                                        width="73px" height="103px" alt="Ferns" title="Ferns"><img
-                                                        class="hid"
-                                                        src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg"
-                                                        alt=""></a></li>
-                                            <li><a href="#"><img
-                                                        src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg"
-                                                        width="74px" height="91px" alt="Nico" title="Nico"><img
-                                                        class="hid"
-                                                        src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg"
-                                                        alt=""></a> </li>
-                                            <li><a href="#"><img
-                                                        src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg"
-                                                        width="76px" height="59px" alt="Child and Beach"
-                                                        title="Child and Beach"><img class="hid"
-                                                        src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg"
-                                                        alt=""></a></li>
-                                        </ul>
-                                        <ul id="col-3">
-                                            <li><a href="#"><img
-                                                        src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg"
-                                                        width="83px" height="103px" alt="Ancient and modern"
-                                                        title="Ancient and Modern"><img class="hid"
-                                                        src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg"
-                                                        alt=""></a></li>
-                                            <li><a href="#"><img
-                                                        src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg"
-                                                        width="80px" height="91px" alt="Felix" title="Felix"><img
-                                                        class="hid"
-                                                        src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg"
-                                                        alt=""></a></li>
-                                            <li><a href="#"><img
-                                                        src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg"
-                                                        width="79px" height="95px" alt="Cliffs" title="Cliffs"><img
-                                                        class="hid"
-                                                        src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg"
-                                                        alt=""></a></li>
-                                        </ul>
-                                        <br class="clear">
-                                    </div><!--gallery block closed -->
-                                </div><!--midcol closed -->
-                            </div><!-- end col-11 -->
-                        </div> <!-- end class row -->
-                    </div> <!-- end class row -->
-                </div><!-- end-col-12 -->
-            </div><!-- end-.row -->
-            <br class="clear">
+                            <div class="data" id="gallery-pagemidcol">
+                                <div class="data" id="gallery-pagegallery-block">
+                                    <ul id="gallerypagecol-1">
+                                        <li><a href="#"><img src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" width="70px" height="103px" alt="Ali" title="Ali"><img class="hid" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" width="69px" height="91px" alt="Cat" title="Cat"><img class="hid" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" width="75px" height="95px" alt="Beach" title="Beach"><img class="hid" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg" alt=""></a></li>
+                                    </ul>
+                                    <ul id="col-2">
+                                        <li><a href="#"><img src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg" width="74px" height="91px" alt="Nico" title="Nico"><img class="hid" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg" alt=""></a> </li>
+                                        <li><a href="#"><img src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" width="76px" height="59px" alt="Child and Beach" title="Child and Beach"><img class="hid" src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg" alt=""></a></li>
+                                    </ul>
+                                    <ul id="col-3">
+                                        <li><a href="#"><img src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg" width="83px" height="103px" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg" width="80px" height="91px" alt="Felix" title="Felix"><img class="hid" src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg" alt=""></a></li>
+                                        <li><a href="#"><img src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg" width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid" src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg" alt=""></a></li>
+                                    </ul>
+                                    <br class="clear">
+                                </div><!--gallery block closed -->
+                            </div><!--midcol closed -->    
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
+                <br class="clear">
+				
+	</div> <!-- end content -->
 
             <div class="row">
                 <div class="çol-12" padding="2%">
