--- a/index.html
+++ b/index.html
@@ -385,11 +385,11 @@
                     <div class="col-12">
                         <h2>Community Photos</h2>
                         <div id="photos_2">
-                            <img id="glenda" alt="Glendatronix" src="images/glenda_200.jpg" alt="Glendatronix">
-                            <img alt="Darth Fader" src="images/fader_200.jpg">
-                            <img alt="Beau Dandy" src="images/beau_200.jpg">
-                            <img alt="Johnny Stardust" src="images/johnny_200.jpg">
-                            <img alt="Mo' Fat" src="images/mofat_200.jpg">
+                            <img id="glenda" alt="Glendatronix" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt="Glendatronix">
+                            <img alt="Darth Fader" src="CSS/images/238271291_10226465338082824_1015647781811843902_n.jpg">
+                            <img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg>
+                            <img alt="Johnny Stardust" src="CSS/images/237791407_2625060101120868_1797541959963855619_n.jpg">
+                            <img alt="Mo' Fat" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg">
                         </div>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
