--- a/index.html
+++ b/index.html
@@ -385,11 +385,25 @@
                     <div class="col-12">
                         <h2>Community Photos</h2>
                         <div id="photos_2">
-                            <img id="glenda" alt="Glendatronix" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt="Glendatronix">
+                            <img id="glenda" alt="Glenda" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt="Glenda">
                             <img alt="Darth Fader" src="CSS/images/238271291_10226465338082824_1015647781811843902_n.jpg">
-                            <img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg>
+                            <img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg">
                             <img alt="Johnny Stardust" src="CSS/images/237791407_2625060101120868_1797541959963855619_n.jpg">
                             <img alt="Mo' Fat" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg">
+							<img alt="Glendatronix" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt="Glendatronix">
+                            <img alt="Darth Fader" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg">
+                            <img alt="Beau Dandy" src="CSS/images/237707293_1277342079361480_377527486401182998_n.jpg">
+                            <img alt="Johnny Stardust" src="CSS/images/237580589_2625064677787077_5906001060071289109_n.jpg">
+                            <img alt="Mo' Fat" src="CSS/images/237356126_2625060031120875_7741273472043676969_n.jpg">
+							<img alt="Darth Fader" src="CSS/images/238271291_10226465338082824_1015647781811843902_n.jpg">
+                            <img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg">
+                            <img alt="Johnny Stardust" src="CSS/images/237791407_2625060101120868_1797541959963855619_n.jpg">
+                            <img alt="Mo' Fat" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg">
+							<img alt="Glendatronix" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt="Glendatronix">
+                            <img alt="Darth Fader" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg">
+                            <img alt="Beau Dandy" src="CSS/images/237707293_1277342079361480_377527486401182998_n.jpg">
+                            <img alt="Johnny Stardust" src="CSS/images/237580589_2625064677787077_5906001060071289109_n.jpg">
+                            <img alt="Mo' Fat" src="CSS/images/237356126_2625060031120875_7741273472043676969_n.jpg">
                         </div>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
