--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2>Community Photos</h2>
-                        <div id="photos_2">
+                        <div id="photos">
                             <img id="glenda" alt="Glenda" src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg" alt="Glenda">
                             <img alt="Darth Fader" src="CSS/images/238271291_10226465338082824_1015647781811843902_n.jpg">
                             <img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg">
@@ -413,7 +413,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2>Around town last night</h2>
-                        <div id="photos_3">
+                        <div id="photos">
                             <a href="#" class="trigger">Image Gallery</a>
                             <ul id="photos_inner">
                                 <li><img alt="Glenda" src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg"></li>
