--- a/index.html
+++ b/index.html
@@ -418,6 +418,24 @@
                             <ul id="photos_inner">
                                 <li><img alt="Glenda" src="CSS/images/222038453_1988083991367553_5934675448180867104_n.jpg"></li>
                                 <li><img alt="Fader" src="CSS/images/22141110_368359666926397_5819846886060823879_n.jpg"></li>
+								<li><img alt="Darth Fader" src="CSS/images/238271291_10226465338082824_1015647781811843902_n.jpg"></li>
+                                <li><img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg"></li>
+                                <li><img alt="Johnny Stardust" src="CSS/images/237791407_2625060101120868_1797541959963855619_n.jpg"></li>
+                                <li><img alt="Mo' Fat" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg"></li>
+							    <li><img alt="Glendatronix" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt="Glendatronix"></li>
+                                <li><img alt="Darth Fader" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg"></li>
+                                <li><img alt="Beau Dandy" src="CSS/images/237707293_1277342079361480_377527486401182998_n.jpg"></li>
+                                <li><img alt="Johnny Stardust" src="CSS/images/237580589_2625064677787077_5906001060071289109_n.jpg"></li>
+                                <li><img alt="Mo' Fat" src="CSS/images/237356126_2625060031120875_7741273472043676969_n.jpg"></li>
+							    <li><img alt="Darth Fader" src="CSS/images/238271291_10226465338082824_1015647781811843902_n.jpg"></li>
+                                <li><img alt="Beau Dandy" src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg"></li>
+                                <li><img alt="Johnny Stardust" src="CSS/images/237791407_2625060101120868_1797541959963855619_n.jpg"></li>
+                                <li><img alt="Mo' Fat" src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg"></li>
+							    <li><img alt="Glendatronix" src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg" alt="Glendatronix"></li>
+                                <li><img alt="Darth Fader" src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg"></li>
+                                <li><img alt="Beau Dandy" src="CSS/images/237707293_1277342079361480_377527486401182998_n.jpg"></li>
+                                <li><img alt="Johnny Stardust" src="CSS/images/237580589_2625064677787077_5906001060071289109_n.jpg"></li>
+                                <li><img alt="Mo' Fat" src="CSS/images/237356126_2625060031120875_7741273472043676969_n.jpg"></li>
                                 <li><img alt="Beau Dandy" src="images/beau_400.jpg"></li>
                                 <li><img alt="Johnny Stardust" src="images/johnny_400.jpg"></li>
                                 <li><img alt="Mo' Fat" src="images/mofat_400.jpg"></li>
