--- a/index.html
+++ b/index.html
@@ -906,58 +906,19 @@
 
                     <div class="data" id="gallery-pagemidcol">
                         <div class="data" id="gallery-pagegallery-block">
-                            <ul id="gallerypagecol-1">
-                                <li><a href="#"><img
-                                            src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg"
-                                            width="70px" height="103px" alt="Ali" title="Ali"><img class="hid"
-                                            src="CSS/images/238387258_2007724449403507_8105347842234961921_n.jpg"
-                                            alt=""></a></li>
-                                <li><a href="#"><img
-                                            src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg"
-                                            width="69px" height="91px" alt="Cat" title="Cat"><img class="hid"
-                                            src="CSS/images/237902978_2007645052744780_6404721655982955770_n.jpg"
-                                            alt=""></a></li>
-                                <li><a href="#"><img
-                                            src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg"
-                                            width="75px" height="95px" alt="Beach" title="Beach"><img class="hid"
-                                            src="CSS/images/237727579_1276715939424094_7986560322475132894_n.jpg"
-                                            alt=""></a></li>
+                            <ul id="gallery3colmixcol-1">
+                                <li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali"><img class="hid" src="images/alilarge.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat"><img class="hid" src="images/catlarge.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/beachthumb.jpg" title="Beach" alt="Beach"><img class = "hid" src="images/beachlarge.jpg" alt=""></a></li>
                             </ul>
-                            <ul id="col-2">
-                                <li><a href="#"><img
-                                            src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg"
-                                            width="73px" height="103px" alt="Ferns" title="Ferns"><img class="hid"
-                                            src="CSS/images/237727391_2625064671120411_1445303706544627832_n.jpg"
-                                            alt=""></a></li>
-                                <li><a href="#"><img
-                                            src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg"
-                                            width="74px" height="91px" alt="Nico" title="Nico"><img class="hid"
-                                            src="CSS/images/237714219_2625059724454239_3433502368907900967_n.jpg"
-                                            alt=""></a> </li>
-                                <li><a href="#"><img
-                                            src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg"
-                                            width="76px" height="59px" alt="Child and Beach"
-                                            title="Child and Beach"><img class="hid"
-                                            src="CSS/images/236882824_4252694588143496_5638611209064020830_n.jpg"
-                                            alt=""></a></li>
+                            <ul id="gallery3colmixcol-2">
+								<li><a href="#"><img src="images/childrenthumb.jpg" title="Children" alt="Children"><img class="hid" src="images/childrenbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/seathumb.jpg" title="Seascape" alt="Seascape"><img class="hid" src="images/seabig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/take-cardthumb.jpg" title="Take a card" alt="Take a card"><img class="hid" src="images/take-cardbig.jpg" alt=""></a></li>
                             </ul>
-                            <ul id="col-3">
-                                <li><a href="#"><img
-                                            src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg"
-                                            width="83px" height="103px" alt="Ancient and modern"
-                                            title="Ancient and Modern"><img class="hid"
-                                            src="CSS/images/227510028_3759145724186252_5779222621043103914_n.jpg"
-                                            alt=""></a></li>
-                                <li><a href="#"><img
-                                            src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg"
-                                            width="80px" height="91px" alt="Felix" title="Felix"><img class="hid"
-                                            src="CSS/images/227233172_4263928440350817_1594041868801189550_n.jpg"
-                                            alt=""></a></li>
-                                <li><a href="#"><img
-                                            src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg"
-                                            width="79px" height="95px" alt="Cliffs" title="Cliffs"><img class="hid"
-                                            src="CSS/images/222462607_189513929881789_1274985151236699729_n.jpg"
-                                            alt=""></a></li>
+                            <ul id="gallery3colmixcol-3">
+                                <li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales"><img class="hid" src="images/walesbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners"><img class="hid" src="images/pensbig.jpg" alt=""></a></li>
                             </ul>
                             <br class="clear">
                         </div><!--gallery block closed -->
