--- a/index.html
+++ b/index.html
@@ -455,14 +455,7 @@
                             <img id="glenda" src="images/glenda_200.jpg" alt="Glendatronix">
                             <img class="to" src="images/fader_200.jpg">
                         </span>
-                    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
-
-				<br class="clear">
-
-                <div class="row">
-                    <div class="col-12">
-                        <div id="crop">
+						<div id="crop">
                             <img id="mofat" src="images/mofat_400.jpg" alt="Mo'Fat">
                             <input type="button" value="crop">
                         </div>
@@ -472,90 +465,124 @@
 				<br class="clear">
 
                 <div class="row">
-                    <div class="col-12">
-                        <div id="news">
-                            <h2>Latest News</h2>
-                            <p>
-                                Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was
-                                spotted last night at <em>Dirt</em>, the trendy New York restaurant that serves only
-                                food caught and retrieved by the chef's own hands?
-                                <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
-                            </p>
-                            <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+                    <div class="col-12">   
+						<header>
+                            <h1>Devon&#39;s Rural Retreats</h1>
+                            <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
+                        </header>
+                        <div id="content">
+                        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                        <div id="leftcol">
+                            <h3>Cottages, converted barns, caravans</h3>
+                           <img alt="cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
                         </div>
-                    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
-
-				<br class="clear">
-
-                <div class="row">
-                    <div class="col-12">
-                        <div id="celebs">
-                            <h2 class="heading">Our Celebrities</h2>
-                            <p class="info">
-                                We have an ever changing roster of newly chipped celebrities. But it can take as little
-                                as a week for the little critters to realise they've been tagged - so you have to be
-                                fast!
-                            </p>
-                            <table class="data">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Name</th>
-                                        <th>Occupation</th>
-                                        <th>Approx. Location</th>
-                                        <th>Price</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>203A</td>
-                                        <td>Johny Stardust (<a href="images/johnny_400.jpg" class="lightbox">pic</a>)
-                                        </td>
-                                        <td>Front-man</td>
-                                        <td>Los Angeles</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>141B</td>
-                                        <td>Beau Dandy (<a href="images/beau_400.jpg" class="lightbox">pic</a>)</td>
-                                        <td>Singer</td>
-                                        <td>New York</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2031</td>
-                                        <td>Mo' Fat (<a href="images/mofat_400.jpg" class="lightbox">pic</a>)</td>
-                                        <td>Producer</td>
-                                        <td>New York</td>
-                                        <td>$19.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>007F</td>
-                                        <td>Kellie Kelly (<a href="images/kellie_400.jpg" class="lightbox">pic</a>)</td>
-                                        <td>Singer</td>
-                                        <td>Omaha</td>
-                                        <td>$11.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>8A05</td>
-                                        <td>Darth Fader (<a href="images/fader_400.jpg" class="lightbox">pic</a>)</td>
-                                        <td>DJ</td>
-                                        <td>London</td>
-                                        <td>$19.95</td>
-                                    </tr>
-                                    <tr>
-                                        <td>6636</td>
-                                        <td>Glendatronix (<a href="images/glenda_400.jpg" class="lightbox">pic</a>)</td>
-                                        <td>Keytarist</td>
-                                        <td>London</td>
-                                        <td>$39.95</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                        <div id="rightcol">
+                            <nav>
+                                <ul>
+                                    <li><a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                    <li><a href="maps.html" title="Location Maps">Maps</a></li>
+                                    <li><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                                    <li><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                                    <li><a href="contact.html" title="Contact us">Contact Us</a></li>
+                                    <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                                </ul>
+                            </nav>
+                        </div><!--end of side menu column-->
+                        <div id="midcol">
+                            <h3>All situated in the beautiful rolling countryside of Devon</h3>
+                            <img alt="Devon countryside" height="229" src="images/devon420.jpg" width="419">
                         </div>
-                    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
+                        <br class="clear">
+                    </div><!--content closed-->
+                </div><!-- end-col-12 -->
+            </div><!-- end-row -->
+
+			<br class="clear">
+
+            <div class="row">
+                <div class="col-12">
+                    <div id="news">
+                        <h2>Latest News</h2>
+                        <p>
+                            Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was
+                            spotted last night at <em>Dirt</em>, the trendy New York restaurant that serves only
+                            food caught and retrieved by the chef's own hands?
+                            <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+                        </p>
+                        <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+                    </div>
+                </div><!-- end-col-12 -->
+            </div><!-- end-row -->
+
+			<br class="clear">
+
+            <div class="row">
+                <div class="col-12">
+                    <div id="celebs">
+                        <h2 class="heading">Our Celebrities</h2>
+                        <p class="info">
+                            We have an ever changing roster of newly chipped celebrities. But it can take as little
+                            as a week for the little critters to realise they've been tagged - so you have to be fast!
+                        </p>
+                        <table class="data">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Occupation</th>
+                                    <th>Approx. Location</th>
+                                    <th>Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>203A</td>
+                                    <td>Johny Stardust (<a href="images/johnny_400.jpg" class="lightbox">pic</a>)
+                                    </td>
+                                    <td>Front-man</td>
+                                    <td>Los Angeles</td>
+                                    <td>$39.95</td>
+                                </tr>
+                                <tr>
+                                    <td>141B</td>
+                                    <td>Beau Dandy (<a href="images/beau_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Singer</td>
+                                    <td>New York</td>
+                                    <td>$39.95</td>
+                                </tr>
+                                <tr>
+                                    <td>2031</td>
+                                    <td>Mo' Fat (<a href="images/mofat_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Producer</td>
+                                    <td>New York</td>
+                                    <td>$19.95</td>
+                                </tr>
+                                <tr>
+                                    <td>007F</td>
+                                    <td>Kellie Kelly (<a href="images/kellie_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Singer</td>
+                                    <td>Omaha</td>
+                                    <td>$11.95</td>
+                                </tr>
+                                <tr>
+                                    <td>8A05</td>
+                                    <td>Darth Fader (<a href="images/fader_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>DJ</td>
+                                    <td>London</td>
+                                    <td>$19.95</td>
+                                </tr>
+                                <tr>
+                                    <td>6636</td>
+                                    <td>Glendatronix (<a href="images/glenda_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Keytarist</td>
+                                    <td>London</td>
+                                    <td>$39.95</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div><!-- end-col-12 -->
+            </div><!-- end-row -->
 				
                 <br class="clear">
 
