--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                             <h1>Devon&#39;s Rural Retreats</h1>
                             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
                         </header>
-                        <div id="content">
+                        <!-- <div id="content"> -->
                         <h2>Award winning accommodation, self catering or bed and breakfast</h2>
                         <div id="leftcol">
                             <h3>Cottages, converted barns, caravans</h3>
@@ -493,7 +493,7 @@
                             <img alt="Devon countryside" height="229" src="images/devon420.jpg" width="419">
                         </div>
                         <br class="clear">
-                    </div><!--content closed-->
+                   <!-- </div><!--content closed-->
                 </div><!-- end-col-12 -->
             </div><!-- end-row -->
 
