--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/starter-page-style.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/three-col-no-tables.css">
-	    <link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css">
+	    <link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css"> -->
 	    <link rel="stylesheet" type="text/css" href="./CSS/transparent.css">
-	    <link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
+	    <!-- <link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadow.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadowfig10.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadowtext.css">
