--- a/starter-page.html
+++ b/starter-page.html
@@ -13,7 +13,7 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
-		<link rel="stylesheet" type="text/css" href="transparent.css">
+		<link rel="stylesheet" type="text/css" href="CSS/transparent.css">
 		<link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
