--- a/starter-page.html
+++ b/starter-page.html
@@ -14,7 +14,7 @@
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
 		<link rel="stylesheet" type="text/css" href="CSS/transparent.css">
-		<link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
 		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
@@ -61,7 +61,7 @@
     </head>
     <body>
         <header>
-            <h1>Devon&#39;s Rural Retreats</h1>
+            <h1>Tourorris&#39;s Rural Retreats</h1>
             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
         </header>
         <div id="content">
