--- a/starter-page.html
+++ b/starter-page.html
@@ -83,7 +83,7 @@
             </nav>
         </div><!--end of side menu column-->
         <div id="midcol">
-            <h3>All situated in the beautiful rolling countryside of Devon</h3>
+            <h3>All situated in the beautiful rolling countryside of Bermuda</h3>
             <img alt="Devon countryside" height="229" src="images/devon420.jpg" width="419">
         </div>
         <br class="clear">
