--- a/starter-page.html
+++ b/starter-page.html
@@ -102,38 +102,16 @@
                 <div class="col-12">
                     <h2 class="heading">Follow Us</h2>
                 </div>
-                <div id="comment">
-                    <h2>Leave a comment</h2>
-                    name:<br>
-                    <input type="text"><br>
-                    comment:<br>
-                    <textarea rows="5" cols="30" name="comment"></textarea>
-                </div>
             </div>
             <div class="row" style="background-color: 66d4ff">
-                <div class="col-12">
-                    <h2>Fine Print</h2>
-                    <p id="fine_print">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                    in voluptate velit esse cillum
-                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui
-                    officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-            </div>
-            <div class="row">
                 <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
                     <div class="form-group">
                         <input class="form-control" type="email" name="subscribe_email"
                             placeholder="Enter your email address" required="required">
                     </div>
                 </div>
-            </div>
+			</div>
+            
             <div class="row">
                 <div class=" col-lg-12 col-md-12  col-sm-12">
                     <div class="subscribe-accept">
@@ -142,11 +120,13 @@
                     <a href="https://orris0.github.io/orris0/privacy.html">Privacy Policy</a>,
                     <a href="https://orris0.github.io/orris0/disclaimer.html">Disclaimer</a>
                     and to receive newsletters from Practical HTML5 Projects for fun and Profit!
-                </div>
+                    </div>
+			    </div>
                 <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
                     like people so their privacy should be respected.
                 </p>
+			</div>	
                 <div id="splitter">
                     <h2>Terms &amp; Conditions</h2>
                     <div class="pane" id="tocPane">
@@ -193,16 +173,16 @@
 
                     </div>
                 </div>
-            </div><!-- end content -->
+            
         </div><!-- end content -->
-        </div><!-- end content -->
+        </div><!-- end content --
         <div id="footer">
             <p>
                 &copy; Copyright 2010 CelebriTracker Productions
             </p>
         </div>
         </p>
-
+-->
         <a href="https://orris0.github.io/orris0/index.html"
             class="back-to-top d-flex align-items-center justify-content-center"><i
                 class="bi bi-arrow-up-short"></i></a>
